--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
   },
   "homepage": "https://github.com/adobe/helix-service#readme",
   "dependencies": {
-    "@adobe/helix-status": "4.3.3"
+    "@adobe/helix-status": "4.3.3",
+    "minimatch": "^3.0.4",
+    "openwhisk": "^3.20.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.1.0",
@@ -50,7 +54,9 @@
     "lodash": "^4.17.15",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
-    "semantic-release": "^15.13.24"
+    "proxyquire": "^2.1.3",
+    "semantic-release": "^15.13.24",
+    "sinon": "^7.4.2"
   },
   "lint-staged": {
     "*.js": "eslint"
