--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.1.0",
     "@adobe/openwhisk-action-builder": "2.1.0",
+    "@pollyjs/adapter-node-http": "^2.6.2",
+    "@pollyjs/core": "^2.6.2",
+    "@pollyjs/persister-fs": "^2.6.2",
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/exec": "^3.3.5",
     "@semantic-release/git": "^7.0.14",
