--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@adobe/helix-service",
+  "name": "@adobe/helix-index-tree",
   "version": "1.2.1",
   "private": true,
-  "description": "Example Helix Service",
+  "description": "Helix (Small) Tree Indexing Service",
   "main": "src/index.js",
   "scripts": {
     "test": " nyc --reporter=text --reporter=lcov -i -g 'Post-Deploy' --check-coverage --branches 100 --statements 100 --lines 100 mocha",
@@ -73,7 +73,7 @@
     }
   },
   "wsk": {
-    "name": "helix-services/service@${version}",
+    "name": "helix-index/index-tree@${version}",
     "static": []
   }
 }
