--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "docs": "npx jsdoc2md -c .jsdoc.json --files 'src/*.js'  > docs/API.md",
     "commit": "git-cz",
     "build": "wsk-builder -v",
-    "deploy": "wsk-builder -v --deploy --web-export false",
+    "deploy": "wsk-builder -v --deploy --web-export false --test",
     "deploy-sequences": "wsk-builder --no-build -no-hints -l latest -l major -l minor",
     "deploy-ci": "wsk-builder -v --deploy  --web-export false --pkgVersion=ci$CIRCLE_BUILD_NUM -l ci"
   },
@@ -74,7 +74,7 @@
     }
   },
   "wsk": {
-    "name": "helix-index/index-tree@${version}",
+    "name": "services/index-tree@${version}",
     "static": []
   },
   "statuspage": {
