--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ executors:
           NPM_CONFIG_PREFIX: "~/.npm-global"
     working_directory: ~/repo
 
-#orbs:
-#  helix-post-deploy: adobe/helix-post-deploy@1.1.0
+orbs:
+  helix-post-deploy: adobe/helix-post-deploy@1.2.1
 
 commands:
   setup:
